--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "oyb",
+  "name": "openyourbubble",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -15,11 +15,13 @@
     "summarize:pending": "tsx scripts/summarize-pending.ts",
     "rank:train": "tsx scripts/rank-train.ts",
     "feedback:report": "tsx scripts/feedback-report.ts",
-    "preview": "tsx scripts/preview.ts"
+    "preview": "tsx scripts/preview.ts",
+    "dataset:build": "tsx scripts/build-dataset.ts"
   },
   "dependencies": {
     "@auth/prisma-adapter": "^1.6.0",
     "@extractus/article-extractor": "^8.0.20",
+    "@mozilla/readability": "^0.6.0",
     "@prisma/client": "^6.17.1",
     "@radix-ui/react-dialog": "^1.1.1",
     "@radix-ui/react-icons": "^1.3.1",
@@ -29,7 +31,10 @@
     "date-fns": "^4.1.0",
     "dotenv": "^16.4.5",
     "fast-xml-parser": "^4.5.0",
+    "framer-motion": "^11.18.2",
+    "franc": "^6.2.0",
     "ioredis": "^5.4.2",
+    "jsdom": "^27.0.1",
     "lucide-react": "^0.460.0",
     "next": "15.5.6",
     "next-auth": "^5.0.0-beta.25",
