Add external scraper fallbacks and tests

--- a/.env.example
+++ b/.env.example
@@ -32,6 +32,9 @@ INGEST_USER_AGENT=OutsideYourBubbleBot/0.1 (+https://outsideyourbubble.example)
 INGEST_TRANSLATE=false
 INGEST_TRANSLATE_MAX_TOTAL=20000
 INGEST_TRANSLATE_CHUNK=3500
+INGEST_ENABLE_JINA_READER=true
+INGEST_ARTICLE_API_URL=
+INGEST_ARTICLE_API_KEY=
 
 # Python bridge
 OYB_PYTHON_BIN=python3
