--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "rank:train": "tsx scripts/rank-train.ts",
     "feedback:report": "tsx scripts/feedback-report.ts",
     "preview": "tsx scripts/preview.ts",
-    "dataset:build": "tsx scripts/build-dataset.ts"
+    "dataset:build": "tsx scripts/build-dataset.ts",
+    "ingest:run": "tsx scripts/ingest-runner.ts"
   },
   "dependencies": {
     "@auth/prisma-adapter": "^1.6.0",
@@ -50,6 +51,9 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
+    "@testing-library/jest-dom": "^6.9.1",
+    "@testing-library/react": "^16.3.0",
+    "@testing-library/user-event": "^14.6.1",
     "@types/node": "^20",
     "@types/nodemailer": "^6.4.15",
     "@types/react": "^19",
