feat(rate-limit): implement Redis-backed rate limiting with fallback to memory; add redis connectivity check and update related scripts

--- a/.env.example
+++ b/.env.example
@@ -7,6 +7,9 @@ LOG_LEVEL=info
 DATABASE_URL=postgresql://oyb:oyb@localhost:5432/oyb
 DIRECT_URL=postgresql://oyb:oyb@localhost:5432/oyb
 
+# Redis (rate limiting, queues)
+REDIS_URL=redis://localhost:6379/0
+
 # Authentication providers
 GITHUB_ID=github-oauth-client-id
 GITHUB_SECRET=github-oauth-client-secret
