feat(onboarding): enhance quickstart with .env creation, add Windows one-click bootstrapper for streamlined setup

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "feedback:report": "tsx scripts/feedback-report.ts",
     "preview": "tsx scripts/preview.ts",
     "quickstart": "node scripts/quickstart.js",
+    "one-click": "powershell -ExecutionPolicy Bypass -File scripts\\one-click.ps1",
     "dataset:build": "tsx scripts/build-dataset.ts",
     "ingest:run": "tsx scripts/ingest-runner.ts"
   },
