--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "test": "vitest",
     "lint": "eslint",
     "prisma:migrate": "prisma migrate dev",
+    "prisma:deploy": "prisma migrate deploy",
     "prisma:generate": "prisma generate",
     "prisma:seed": "prisma db seed",
     "prisma:studio": "prisma studio",
